--- a/portal/assets/css/main.css
+++ b/portal/assets/css/main.css
@@ -2165,7 +2165,7 @@ input, select, textarea {
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #666;
+			color: #160707;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2193,7 +2193,7 @@ input, select, textarea {
 			input[type="radio"] + label:before {
 				background: rgba(144, 144, 144, 0.075);
 				border-radius: 4px;
-				border: solid 1px rgba(144, 144, 144, 0.5);
+				border: solid 1px rgba(24, 5, 5, 0.5);
 				content: '';
 				display: inline-block;
 				font-size: 0.8em;
@@ -2208,8 +2208,8 @@ input, select, textarea {
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #666666;
-			border-color: #666666;
+			background: #060101;
+			border-color: #0e0101;
 			color: #ffffff;
 			content: '\f00c';
 		}
@@ -2306,32 +2306,32 @@ input, select, textarea {
 		}
 
 		.icon.style1:before {
-			color: #c3e895;
+			color: #84f315;
 		}
 
 		.icon.style2:before {
-			color: #8addaa;
+			color: #56ef0f;
 		}
 
 		.icon.style3:before {
-			color: #6bd4c8;
+			color: #cac41d;
 		}
 
 		.icon.style4:before {
-			color: #57aed3;
+			color: #e7dc0a;
 		}
 
 		.icon.style5:before {
-			color: #4a87d3;
+			color: #db7211;
 		}
 
 		.icon.style6:before {
-			color: #6b88e6;
+			color: #e30c0c;
 		}
 
 		.icon.major {
 			text-decoration: none;
-			color: #555;
+			color: #1a0202;
 			cursor: default;
 			display: inline-block;
 			margin: 0 0 1.5em 0;
@@ -2646,7 +2646,7 @@ input, select, textarea {
 		}
 
 		table th {
-			color: #555;
+			color: #090101;
 			font-size: 0.9em;
 			font-weight: 400;
 			padding: 0 0.75em 0.75em 0.75em;
@@ -2824,11 +2824,11 @@ input, select, textarea {
 	}
 
 		.main.style1 {
-			background: #222;
+			background: #060101;
 		}
 
 		.main.style2 {
-			background-color: #333;
+			background-color: #0c0101;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
 			background-image: url("images/overlay1.png"), url("../../images/header.jpg");
@@ -2869,7 +2869,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:hover,
 				.main.style2 button:hover,
 				.main.style2 .button:hover {
-					background-color: rgba(255, 255, 255, 0.125);
+					background-color: rgba(0, 0, 0, 0.125);
 				}
 
 				.main.style2 input[type="submit"]:active,
@@ -3115,8 +3115,8 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
-		color: rgba(255, 255, 255, 0.75);
+		background-color: #e15b1d;
+		color: rgba(110, 5, 5, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
 		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #270b04, #8b2d04 50%, #cda324 95%);
 		background-position: top left,						center center,					center center;
