--- a/portal/assets/css/main.css
+++ b/portal/assets/css/main.css
@@ -3115,10 +3115,10 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #e15b1d;
-		color: rgba(110, 5, 5, 0.75);
-		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #270b04, #8b2d04 50%, #cda324 95%);
+		background-color: #10100f;
+		color: rgb(255, 255, 255);
+		background-attachment: fixed, fixed, fixed;
+		background-image: url(images/overlay2.png), url(images/overlay4.svg), linear-gradient(45deg, #000000, #8b2d04c9 50%, #cda324 95%, #cda324 95%);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
