--- a/portal/assets/css/main.css
+++ b/portal/assets/css/main.css
@@ -3114,11 +3114,11 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		padding: 6em 0 6em 0 ;
+		padding: 6em 0 6em 0;
 		background-color: #10100f;
 		color: rgb(255, 255, 255);
 		background-attachment: fixed, fixed, fixed;
-		background-image: url(images/overlay2.png), url(images/overlay4.svg), linear-gradient(45deg, #000000, #8b2d04c9 50%, #cda324 95%, #cda324 95%);
+		background-image: url(images/overlay2.png), url(images/overlay4.svg), linear-gradient(90deg, #000000, #000000, #000000 50%, #000000 95%, #000000 95%);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
